alterado licença do projeto é adicionado restify e cors no projeto

--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "body-parser": "^1.18.3",
     "mysql": "^2.16.0",
-    "restify": "^7.2.1"
+    "restify": "^7.2.1",
+    "restify-cors-middleware": "^1.1.1"
   },
   "devDependencies": {
     "eslint": "^5.2.0",
