--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "MIT",
   "dependencies": {
     "body-parser": "^1.18.3",
+    "dotenv": "^6.0.0",
     "mysql": "^2.16.0",
     "restify": "^7.2.1",
     "restify-cors-middleware": "^1.1.1"
