--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "ava",
+    "test": "ava --verbose",
     "dev": "nodemon src/*.js",
     "start": "pm2 src/index.js",
     "lint": "./node_modules/.bin/eslint src/*.js"
