--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "dotenv": "^6.0.0",
     "mysql": "^2.16.0",
     "restify": "^7.2.1",
-    "restify-cors-middleware": "^1.1.1"
+    "restify-cors-middleware": "^1.1.1",
+    "sha1": "^1.1.1"
   },
   "devDependencies": {
     "ava": "^0.25.0",
