--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "dotenv": "^6.0.0",
+    "jsonwebtoken": "^8.3.0",
     "mysql": "^2.16.0",
     "restify": "^7.2.1",
     "restify-cors-middleware": "^1.1.1",
