--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "body-parser": "^1.18.3",
     "dotenv": "^6.0.0",
     "jsonwebtoken": "^8.3.0",
+    "lodash": "^4.17.11",
     "mysql": "^2.16.0",
     "restify": "^7.2.1",
     "restify-cors-middleware": "^1.1.1",
@@ -29,6 +30,8 @@
     "eslint-plugin-node": "^7.0.1",
     "eslint-plugin-promise": "^3.8.0",
     "eslint-plugin-standard": "^3.1.0",
+    "filter-files": "^0.4.0",
+    "is-directory": "^0.3.1",
     "nodemon": "^1.18.3"
   }
 }
