--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "ava --verbose",
     "dev": "nodemon src/*.js",
-    "start": "pm2 src/index.js",
+    "start": "node src/index.js",
     "lint": "./node_modules/.bin/eslint src/*.js"
   },
   "keywords": [],
@@ -15,8 +15,11 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "dotenv": "^6.0.0",
+    "filter-files": "^0.4.0",
+    "is-directory": "^0.3.1",
     "jsonwebtoken": "^8.3.0",
     "lodash": "^4.17.11",
+    "mongojs": "^2.6.0",
     "mysql": "^2.16.0",
     "restify": "^7.2.1",
     "restify-cors-middleware": "^1.1.1",
@@ -30,8 +33,6 @@
     "eslint-plugin-node": "^7.0.1",
     "eslint-plugin-promise": "^3.8.0",
     "eslint-plugin-standard": "^3.1.0",
-    "filter-files": "^0.4.0",
-    "is-directory": "^0.3.1",
     "nodemon": "^1.18.3"
   }
 }
