Add volume to the docker development and change db of docker compose

--- a/docker-compose.development.yml
+++ b/docker-compose.development.yml
@@ -20,7 +20,12 @@ services:
     environment:
       MYSQL_ROOT_PASSWORD: example
     ports:
-    - '3306:3306'
+      - '3306:3306'
+    volumes:
+      - db_data:/var/lib/mysql
+
 
 networks:
   app:
+volumes:
+  db_data:
