--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,16 +2,15 @@ version: '2'
 services:
   app:
     build: .
-    command: npm run dev
     networks:
       - app
     depends_on:
-      - mariadb
+      - mysql
     ports:
-      - '3000:3456'
+      - '80:3456'
 
-  mariadb:
-    image: mariadb
+  mysql:
+    image: mysql:5.6
     networks:
       - app
     environment:
