--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "jsonwebtoken": "^8.3.0",
     "lodash": "^4.17.11",
     "mongojs": "^2.6.0",
-    "mysql": "^2.16.0",
+    "mysql": "github:mysqljs/mysql",
     "restify": "^7.2.1",
     "restify-cors-middleware": "^1.1.1",
     "sha1": "^1.1.1"
