--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,19 +1,28 @@
 version: '2'
+
 services:
   app:
     build: .
+    command: npm run dev
     networks:
       - app
     depends_on:
       - mysql
     ports:
-      - '80:3456'
+      - '3456:3456'
+    volumes:
+      - ./src:/home/app
+      - /home/app/node_modules
 
   mysql:
     image: mysql:5.7
     networks:
       - app
+    ports:
+      - '3306:3306'  
     environment:
+      MYSQL_USER: example
+      MYSQL_PASSWORD: example
       MYSQL_ROOT_PASSWORD: example
 
 networks:
