add bcrypt and refactor password

--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
     "lint": "./node_modules/.bin/eslint src/*.js"
   },
   "keywords": [],
-  "author": "",
+  "author": "Lucas Augusto",
   "license": "MIT",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "body-parser": "^1.18.3",
     "dotenv": "^6.0.0",
     "filter-files": "^0.4.0",
